--- a/jwebppy/src/main/resources/templates/platform/layout/popup/index.html
+++ b/jwebppy/src/main/resources/templates/platform/layout/popup/index.html
@@ -13,8 +13,12 @@
 			
 		<style type="text/css">
 			.main.container {
-				margin-top: 3em;
-			}		
+				margin-top: 4em;
+			}
+			
+			html {
+				overflow-y: hidden;
+			}
 		</style>
 	</head>
 <body>
