--- a/jwebppy/src/main/resources/static/portal/css/basic.css
+++ b/jwebppy/src/main/resources/static/portal/css/basic.css
@@ -479,7 +479,7 @@ td.link:hover {text-decoration: underline; color: #00a779; cursor: pointer;}
 	height:26px;
 	vertical-align: middle;
 }
-.copylight{
+.copyright{
 	display: inline;
 	letter-spacing: -0.28px;
 	vertical-align: middle;
