--- a/jwebppy/src/main/resources/templates/error.html
+++ b/jwebppy/src/main/resources/templates/error.html
@@ -70,11 +70,11 @@
 	<div style="margin-top:138px;">
 		<img src="/portal/img/popup/alert.png">
 	</div>
-	<div style="margin-top: 20px;" th:if="${status == 401 || status == 403}" th:text="#{DIVEU_M_0048}"></div>
-	<div style="margin-top: 20px;" th:unless="${status == 401 || status == 403}" th:text="#{DIVEU_M_0026}"></div>
+	<div style="margin-top: 20px;" th:if="${status == 401 || status == 403}" th:text="#{DCP_M_SESSION_EXPIRED}"></div>
+	<div style="margin-top: 20px;" th:unless="${status == 401 || status == 403}" th:text="#{DCP_M_ERROR}"></div>
 	<div style="width:auto; height:220px; background-color: #f9f9f9; margin: 40px 40px 0 40px;">
 		<div style="height: 30px;"></div>
-		<button id="BTN_goMain" class="gomain-button"><span th:text="#{DIVEU_B_0030}"></span> <img src="/portal/img/common/arrow_right.png"></button>
+		<button id="BTN_goMain" class="gomain-button"><span th:text="#{DCP_B_GO_MAIN}"></span> <img src="/portal/img/common/arrow_right.png"></button>
 	</div>
 </div>
 
@@ -87,7 +87,7 @@
 		<div class="logo-area">
 			<img class="footer-logo" th:src="@{/portal/img/logo-s.png}">
 			<div class="split"></div>
-			<div class="copylight" th:text="#{DIVEU_T_0067}"></div>
+			<div class="copyright" th:text="#{PLTF_T_COPYLEFT}"></div>
 		</div>
 		<div>
 			<button>Language</button>
