--- a/jwebppy/src/main/resources/templates/platform/mgmt/user/list.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/user/list.html
@@ -188,7 +188,7 @@ $(document).ready(function() {
 				async: false,
 				success: function(data, textStatus, jqXHR)
 				{
-					if (data.RESULT == "duplicated")
+					if (data.RESULT == "DUPLICATED")
 					{
 						isValid = false;
 					};
