--- a/jwebppy/src/main/resources/templates/portal/layout/common/fragments/bottom.html
+++ b/jwebppy/src/main/resources/templates/portal/layout/common/fragments/bottom.html
@@ -5,7 +5,7 @@
 		<div class="logo-area">
 			<img class="footer-logo" th:src="@{/portal/img/logo-s.png}" alt="Doosan"/>
 			<div class="split"></div>
-			<div class="copylight" th:text="#{DIVEU_T_0067}"></div>
+			<div class="copyright" th:text="#{PLTF_T_COPYLEFT}"></div>
 		</div>
 		<div>
 			<button>Language</button>
