--- a/jwebppy/src/main/resources/templates/platform/mgmt/content/main.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/content/main.html
@@ -448,7 +448,7 @@
 		});
 	});
 	
-	function doAfterSavingLang(lSeq)
+	function doAfterSavingLang(isNew, lSeq)
 	{
 		$("#FORM_updateLang input[name=cSeq]").val(getSeq());
 		$("#FORM_updateLang input[name=lSeq]").val(lSeq);
