--- a/jwebppy/src/main/resources/templates/portal/scm/parts/domestic/info/parts_info.html
+++ b/jwebppy/src/main/resources/templates/portal/scm/parts/domestic/info/parts_info.html
@@ -25,7 +25,7 @@
 <table class="condition table-fixed">
 	<tbody>
 		<tr>
-			<th style="width:150px" th:text="#{DCP_L_PARTS_NO}"></th><!-- Part No. -->
+			<th style="width:15%" th:text="#{DCP_L_PARTS_NO}"></th><!-- Part No. -->
 			<td colspan="3">
 				<div class="input-area">
 					<input type="text" id="pPartsNo" name="pPartsNo" class="custom-ui-btn" style="text-transform: uppercase;">
@@ -42,9 +42,9 @@
 <table class="condition table-fixed">
 	<tbody>
 		<tr>
-			<th style="width:150px" th:text="#{DCP_L_DESCRIPTION}"></th><!-- Description -->
+			<th style="width:15%" th:text="#{DCP_L_DESCRIPTION}"></th><!-- Description -->
 			<td id="MAKTX"></td>
-			<th style="width:150px" th:text="#{DCP_L_STOCK}"></th><!-- Stock -->
+			<th style="width:15%" th:text="#{DCP_L_STOCK}"></th><!-- Stock -->
 			<td id="AVA_FLAG"></td>			
 		</tr>		
 		<tr>
@@ -101,8 +101,8 @@
 <table class="condition">
 	<thead>
 		<tr>
-			<th rowspan="2" th:text="#{DCP_L_LIST_PRICE}"></th><!--List Price  -->
-			<th colspan="3" th:text="#{DCP_L_NET_PRICE}"></th><!-- Net Price -->			
+			<th rowspan="2" th:text="#{DCP_L_LIST_PRICE}" style="width:15%"></th><!--List Price  -->
+			<th colspan="3" th:text="#{DCP_L_NET_PRICE}" style="width:85%"></th><!-- Net Price -->			
 		</tr>		
         <tr>
             <th th:text="#{DCP_L_STOCK_ORDER}"></th><!-- Stock Order -->
