--- a/jwebppy/src/main/resources/templates/platform/mgmt/user/credentials/policy/list.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/user/credentials/policy/list.html
@@ -27,66 +27,103 @@
 	<div class="ui divider"></div>
 	<div class="ui one column grid">
 		<div class="column">
-			<div id="BTN_deleteUser" class="ui teal button"><i class="minus icon"></i> Delete</div>
+			<div id="BTN_new" class="ui teal button"><i class="plus icon"></i> New</div>
+			<div id="BTN_delete" class="ui teal button"><i class="minus icon"></i> Delete</div>
 		</div>
-	</div>	
+	</div>
+	</form>	
+	<form id="FORM_write" class="ui form" autocomplete="off" onsubmit="return false;">
 	<div id="TBL_list"></div>
 	</form>
 </div>
 <script type="application/javascript">
-	$(document).ready(function() {
-		let listTable = new JpUiTable($("#TBL_list"));
-		listTable.settings = {
-				ajax: {
-					url: JpUtilsPath.url("/platform/mgmt/user/credentials/policy/list/data"),
-					form: $("#FORM_search")
-				},
-				onClickPageNumber: function(pageNumber)
-				{
-					$("#pageNumber").val(pageNumber);
-					doSearch();
-				},
-				checkbox: {
-					onChange: function() {
-						let name = $(this).attr("name");
+let listTable;
+
+$(document).ready(function() {
+	listTable = new JpUiTable($("#TBL_list"));
+	listTable.settings = {
+			ajax: {
+				url: JpUtilsPath.url("/platform/mgmt/user/credentials/policy/list/data"),
+				form: $("#FORM_search")
+			},
+			onClickPageNumber: function(pageNumber)
+			{
+				$("#pageNumber").val(pageNumber);
+				doSearch();
+			},
+			onClickDataKey: function(element, key, row)
+			{
+				goWrite(key);
+			},				
+			checkbox: {
+				onChange: function() {
+					let name = $(this).attr("name");
+					
+					if (name == "fgUse" || name == "fgDefault")
+					{
+						let cpSeq = $(this).closest("tr").find("input:checkbox[name=cpSeq]").val();							
+						let path = (name == "fgUse") ? "use" : "default";
 						
-						if (name == "fgUse" || name == "fgDefault")
-						{
-							let cpSeq = $(this).closest("tr").find("input:checkbox[name=cpSeq]").val();							
-							let path = (name == "fgUse") ? "use" : "default";
-							let value = ($(this).is(":checked")) ? $(this).val() : "";
-							
-							JpUtilsAjax.post({
-								url: JpUtilsPath.url("/platform/mgmt/user/credentials/policy/modify/" + path),
-								data: {cpSeq: cpSeq, value: value},
-								success: function(data, textStatus, jqXHR)
-								{
-									listTable.load();
-								}
-							});							
-						}
+						let data = {cpSeq: cpSeq};
+						data[name] = ($(this).is(":checked")) ? $(this).val() : "";
+
+						JpUtilsAjax.post({
+							url: JpUtilsPath.url("/platform/mgmt/user/credentials/policy/save/" + path),
+							data: data,
+							success: function(data, textStatus, jqXHR)
+							{
+								console.log(JSON.stringify(data));
+								doSearch();
+							}
+						});							
 					}
 				}
-		};
-
-		$("#BTN_search").on("click", function() {
-			doSearch();
-		});
-		
-		$("#query").on("keydown", function(event) {
-			if (event.keyCode==13)
-			{
-				doSearch();
 			}
-		});
-		
-		function doSearch()
-		{
-			listTable.load();
-		};	
-		
+	};
+
+	$("#BTN_search").on("click", function() {
 		doSearch();
 	});
+
+	$("#query").on("keydown", function(event) {
+		if (event.keyCode==13)
+		{
+			doSearch();
+		}
+	});
+	
+	function goWrite(cpSeq)
+	{
+		JpUiPopup.open({
+			url: "/platform/mgmt/user/credentials/policy/write?cpSeq=" + JpUtilsString.trimToEmpty(cpSeq)
+		});			
+	};
+	
+	$("#BTN_new").on("click", function() {
+		goWrite();
+	});
+	
+	$("#BTN_delete").on("click", function() {
+		if (confirm("Do you want to delete them?"))
+		{
+			JpUtilsAjax.post({
+				url: JpUtilsPath.url("/platform/mgmt/user/credentials/policy/delete"),
+				data: $("#FORM_write").serialize(),
+				success: function(data, textStatus, jqXHR)
+				{
+					listTable.load();
+				}
+			});					
+		};
+	});
+	
+	doSearch();
+});
+
+function doSearch()
+{
+	listTable.load();
+};
 </script>
 
 </th:block>
