Password 변경 기능 추가

--- a/jwebppy/src/main/resources/templates/platform/mgmt/user/credentials/policy/write.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/user/credentials/policy/write.html
@@ -25,6 +25,10 @@
 		</select>
 	</div>
 	<div class="field">
+		<label class="required">Name</label>
+		<input type="text" name="name" th:value="${credentialsPolicy.name}"/>
+	</div>
+	<div class="field">
 		<label>Description</label>
 		<textarea name="description" th:text="${credentialsPolicy.description}" rows="3"></textarea>
 	</div>
