--- a/jwebppy/src/main/resources/templates/platform/common/authentication/login.html
+++ b/jwebppy/src/main/resources/templates/platform/common/authentication/login.html
@@ -15,8 +15,11 @@
 <script type="application/javascript" th:src="@{/platform/js/jWebppy.utils.string.js}"></script>
 <script type="application/javascript" th:src="@{/platform/js/jquery/jquery.cookie.js}"></script>
 <script type="application/javascript">
+let INDEX_URL = "[[${T(org.jwebppy.platform.core.PlatformConfigVo).INDEX_URL}]]";
+
 $(window).load(function() {
 	showLoginBox();
+	$("#username").focus();
 });
 
 $(window).resize(function() {
@@ -27,8 +30,6 @@ $(window).resize(function() {
  * HD: 1280X720
  * FDH: 1920X1080
  */
-let RESIZING_MIN_WIDTH = 1700;
-
 function resizeView()
 {
 	$("#IMG_main").width($(window).width());
@@ -69,19 +70,16 @@ function login()
 		},			
 		error: function(jqXHR, textStatus, errorThrown)
 		{
-			let status = jqXHR.status;
-
-			if (status == "401")
+			let errorType = jqXHR.getResponseHeader("Error-Type");
+			
+			if (errorType == "CredentialsExpired")
+			{
+				alert("[[#{PLTF_M_PASSWORD_EXPIRED}]]");
+				document.location.href = "[[${T(org.jwebppy.platform.core.PlatformConfigVo).FORM_PASSWORD_CHANGE_PAGE_URL}]]";
+			}
+			else
 			{
 				alert("[[#{PLTF_M_LOGIN_AUTHENTICATION_FAILED}]]");
-			}
-			else if (status == "403")
-			{
-				alert("[[#{PLTF_M_LOGIN_HAVE_NO_AUTHORITY}]]");
-			}
-			else if (status == "423")
-			{
-				alert("[[#{PLTF_M_LOGIN_ACCOUNT_LOCKED}]]");
 			};
 		},
 		complete: function(jqXHR, textStatus)
@@ -119,7 +117,7 @@ $(document).ready(function() {
 	});
 	
 	$("#openNewWindow").on("click", function() {
-		window.open("/", new Date().getMilliseconds());
+		window.open(INDEX_URL, new Date().getMilliseconds());
 	});
 	
 	$(".save-username").on("click", function() {
@@ -150,7 +148,6 @@ function showLoginBox()
 <body>
 <div id="openNewWindow" style="position: fixed; top: 5px; right: 5px; cursor: pointer; font-weight: bold;">New Window</div>
 <form id="FORM_login" method="post" onsubmit="return loginCheck();">
-<input type="hidden" id="token" name="token" />
 <input type="hidden" id="saveUsername" name="saveUsername" />
 <div id="wrap" class="wrap">
 	<div style="text-align: center">
