플랫폼 개발

--- a/jwebppy/src/main/resources/templates/platform/common/authentication/change_password.html
+++ b/jwebppy/src/main/resources/templates/platform/common/authentication/change_password.html
@@ -8,18 +8,23 @@
 <title th:text="#{PLTF_T_0006}"></title>
 
 <link rel="stylesheet" type="text/css" th:href="@{/platform/css/login/login.css}" />
+<link rel="stylesheet" type="text/css" class="ui" th:href="@{/platform/css/semantic/semantic.min.css}" />
 
 <script type="application/javascript" th:src="@{/platform/js/jquery/jquery.min.js}"></script>
 <script type="application/javascript" src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script type="application/javascript" th:src="@{/platform/js/jWebppy.ui.dimmer.js}"></script>
 <script type="application/javascript" th:src="@{/platform/js/jWebppy.utils.object.js}"></script>
 <script type="application/javascript" th:src="@{/platform/js/jWebppy.utils.string.js}"></script>
 <script type="application/javascript" th:src="@{/platform/js/jquery/jquery.cookie.js}"></script>
+<script type="application/javascript" th:src="@{/platform/js/semantic/semantic.min.js}"></script>
 <script type="application/javascript">
 let INDEX_URL = "[[${T(org.jwebppy.platform.core.PlatformConfigVo).INDEX_URL}]]";
 
 $(window).load(function() {
 	showLoginBox();
 	$("#password").focus();
+	
+	JpUiDimmer.hideDimmer();
 });
 
 $(window).resize(function() {
@@ -48,7 +53,7 @@ function checkForm()
 	{
 		alert("[[#{PLTF_M_EMPTY_NEW_PWD}]]");
 		$("#newPassword").focus();			
-		return false;				
+		return false;
 	}
 	else if (JpUtilsString.isEmpty($("#confirmPassword").val()))
 	{
@@ -62,7 +67,7 @@ function checkForm()
 		$("#newPassword").focus();
 		return false;
 	}
-	else if (JpUtilsString.notEquals($("#password").val(), $("#newPassword").val()))
+	else if (JpUtilsString.equals($("#password").val(), $("#newPassword").val()))
 	{
 		alert("[[#{	PLTF_M_NOT_ALLOWABLE_PASSWORD}]]");
 		$("#newPassword").focus();
@@ -82,18 +87,41 @@ function doSubmit()
 			type: "POST", //GET, POST
 			url: url,
 			data: $("#FORM_password").serialize(),
+			beforeSend: function(jqXHR, settings)
+			{
+				JpUiDimmer.showDimmer();
+			},			
 			success: function(data, textStatus, jqXHR)
 			{
 				let result = data.RESULT;
 				
-				if (result == "O")
+				let checkResult = result.RESULT;
+				
+				if (checkResult == 1)
 				{
 					alert("[[#{PLTF_M_CHANGE_PASSWORD_SUCCESS}]]");
 					document.location.href = INDEX_URL;
 				}
 				else
 				{
-					alert("[[#{PLTF_M_CHANGE_PASSWORD_FAIL}]]");
+					alert(checkResult);
+					
+					let message = "";
+					
+					$.each(result.MESSAGE, function (index, value) {
+						message += value + "\n";
+					});					
+					
+					alert(message);
+					
+					if (checkResult == -999)
+					{
+						document.location.href = INDEX_URL;
+					}
+					else
+					{
+						JpUiDimmer.hideDimmer();	
+					}
 				};
 			}
 		});		
@@ -101,6 +129,8 @@ function doSubmit()
 };
 
 $(document).ready(function() {
+	JpUiDimmer.showDimmer();
+
 	$("#openNewWindow").on("click", function() {
 		window.open(INDEX_URL, new Date().getMilliseconds());
 	});
