--- a/jwebppy/src/main/resources/templates/platform/mgmt/user/credentials/policy/write.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/user/credentials/policy/write.html
@@ -14,7 +14,7 @@
 <div class="ui segment">
 	<div class="ui one column grid">
 		<div class="column">
-			<div id="BTN_save" class="ui teal button"><i class="check icon"></i> Save</div>
+			<div class="ui teal button BTN_save"><i class="check icon"></i> Save</div>
 		</div>
 	</div>
 	<div class="ui divider"></div>
@@ -33,6 +33,10 @@
 		<textarea name="description" th:text="${credentialsPolicy.description}" rows="3"></textarea>
 	</div>
 	<div class="field">
+		<label>Password Valid Period</label>
+		<input type="number" name="pwdValidPeriod" min="0" oninput="validity.valid||(value='');" th:value="${credentialsPolicy.pwdValidPeriod}" placeholder="Days"/>
+	</div>	
+	<div class="field">
 		<div class="ui checkbox">
 			<input type="checkbox" name="fgUse" class="hidden" th:value="${T(org.jwebppy.platform.core.PlatformCommonVo).YES}" th:checked="${credentialsPolicy.fgUse == T(org.jwebppy.platform.core.PlatformCommonVo).YES}" >
 			<label>Use</label>
@@ -48,7 +52,6 @@
 		<a class="active item" data-tab="username">Username</a>
 		<a class="item" data-tab="password">Password</a>
 	</div>
-	
 	<div class="ui tab attached segment teal active" data-tab="username">
 		<div class="field">
 			<label class="required">Length</label>
@@ -164,6 +167,12 @@
 			</div>
 		</div>
 	</div>
+	<div class="ui divider"></div>
+	<div class="ui one column grid">
+		<div class="column">
+			<div class="ui teal button BTN_save"><i class="check icon"></i> Save</div>
+		</div>
+	</div>		
 </div>
 </form>
 <script type="application/javascript">
@@ -174,7 +183,7 @@ $(document).ready(function() {
 	$("#FORM_write").form(formValidCheck);
 	
 	
-	$("#BTN_save").on("click", function() {
+	$(".BTN_save").on("click", function() {
 		if ($("#FORM_write").form("validate form"))
 		{
 			JpUtilsAjax.post({
@@ -184,8 +193,11 @@ $(document).ready(function() {
 				{
 					if (data.RESULT > 0)
 					{
-						opener.doSearch();
-						window.close();
+						try
+						{
+							opener.doSearch();	
+						}
+						catch (e) {}
 					};
 				}
 			});
