--- a/jwebppy/src/main/resources/templates/platform/mgmt/user/list.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/user/list.html
@@ -37,17 +37,17 @@
 	</div>
 	<div id="TBL_users"></div>
 	</form>
-	<div class="ui segment" id="AREA_viewUserDetail">
+	<div class="ui segment" id="AREA_viewUserDetail" style="display:none;">
 		<div class="ui header"></div>
 		<div class="ui clearing divider"></div>
 		<div id="TAB_viewUserDetail" class="ui secondary pointing menu">
-			<a class="item active wrap" data-tab="general">General</a>
+			<a class="item wrap" data-tab="general">General</a>
 			<a class="item wrap" data-tab="account">Account</a>
 			<a class="item wrap" data-tab="contact">Contact</a>
 			<a class="item wrap" data-tab="authority">Authority</a>
 			<a class="item wrap" data-tab="login_history">Login History</a>
 		</div>
-		<div class="AREA_moveToModifyUser">
+		<div class="AREA_moveToModifyUser" style="display:none;">
 			<div class="ui teal button BTN_modifyUser"><i class="edit outline icon"></i> Modify</div>
 			<div class="ui clearing divider"></div>
 		</div>
@@ -58,13 +58,13 @@
 		</div>
 		<form id="FORM_modifyUser" class="ui form" autocomplete="off" onsubmit="return false;">
 			<input type="hidden" name="uSeq" />
-			<div class="ui tab active attached segment teal" data-tab="general"></div>
+			<div class="ui tab attached segment teal" data-tab="general"></div>
 			<div class="ui tab attached segment teal" data-tab="account"></div>
 			<div class="ui tab attached segment teal" data-tab="contact"></div>
 			<div class="ui tab attached segment teal" data-tab="authority"></div>
 			<div class="ui tab attached" data-tab="login_history"></div>
 		</form>
-		<div class="AREA_moveToModifyUser">
+		<div class="AREA_moveToModifyUser" style="display:none;">
 			<div class="ui clearing divider"></div>
 			<div class="ui teal button BTN_modifyUser"><i class="edit outline icon"></i> Modify</div>
 		</div>
@@ -84,7 +84,7 @@
 	    		<div class="column">
 	    			<div class="field required">
 	    				<label>Username</label>
-	    				<input type="text" name="username" style="text-transform: uppercase;"/>
+	    				<input type="text" name="username"/>
 	    			</div>
 	    			<div class="field required">
 	    				<label>Password</label>
@@ -442,6 +442,13 @@ $(document).ready(function() {
 						if (tabPath == "account")
 						{
 							JpUiCalendar.datetimeCalendar($("#fromValid"), $("#toValid"));
+							
+							$("input:password[name=password], input:password[name=confirmPassword]").on("keydown", function(event) {
+								if (event.keyCode == 13)
+								{
+									doSaveUser();	
+								};
+							});
 						}
 						else if (tabPath == "contact")
 						{
@@ -477,14 +484,17 @@ $(document).ready(function() {
 							$(".ui.tab[data-tab=authority]").html(html.join(""));
 
 							JpUtilsAjax.get({
-								url: JpUtilsPath.url("/platform/mgmt/content/contents"),
-								data: {"type" : "R", "type" : "G"},
+								url: JpUtilsPath.url("/platform/mgmt/content/list/data"),
+								data: {"types" : ["R", "G"]},
 								global: false,
+								traditional: true,
 								success: function(data, textStatus, jqXHR)
 								{
 									if (data.RESULT != null)
 									{
 										let options = [];
+										
+										alert(JSON.stringify(data));
 
 									    data.RESULT.forEach(function(element, index) {
 									    	options.push("<option value='" + element.cseq + "' data-key='" + element.cseq + "'>" + element.description + " - " + element.name + "</option>");
@@ -803,7 +813,10 @@ $(document).ready(function() {
 		doSearch();
 	});
 
-	$(".BTN_saveUser").on("click", function() {
+	$(".BTN_saveUser").on("click", doSaveUser);
+	
+	function doSaveUser()
+	{
 		if ($("#FORM_modifyUser").form("validate form"))
 		{
 			if (viewUserTab.tabPath == "authority")
@@ -833,7 +846,7 @@ $(document).ready(function() {
 				}
 			});
 		}
-	});
+	};
 
 	$(".BTN_cancelUser").on("click", function() {
 		if (JpUtilsString.isEmpty(getSeq()))
