--- a/jwebppy/src/main/resources/templates/platform/mgmt/authority/list.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/authority/list.html
@@ -43,7 +43,7 @@
 	</div>
 	<div id="TBL_authority"></div>
 	</form>
-	<div class="ui segment" id="AREA_viewAuthorityDetail">
+	<div class="ui segment" id="AREA_viewAuthorityDetail" style="display:none;">
 		<div class="ui header"></div>
 		<div class="ui clearing divider"></div>
 		<div id="TAB_viewAuthorityDetail" class="ui secondary pointing menu">
@@ -51,7 +51,7 @@
 			<a class="item wrap" data-tab="user">User</a>
 			<a class="item wrap" data-tab="authority">Authority</a>
 		</div>
-		<div class="AREA_moveToModifyAuthority">
+		<div class="AREA_moveToModifyAuthority" style="display:none;">
 			<div class="ui teal button BTN_modifyAuthority"><i class="edit outline icon"></i> Modify</div>
 			<div class="ui clearing divider"></div>
 		</div>
@@ -66,7 +66,7 @@
 			<div class="ui tab attached" data-tab="user"></div>
 			<div class="ui tab attached segment teal" data-tab="authority"></div>
 		</form>
-		<div class="AREA_moveToModifyAuthority">
+		<div class="AREA_moveToModifyAuthority" style="display:none;">
 			<div class="ui clearing divider"></div>
 			<div class="ui teal button BTN_modifyAuthority"><i class="edit outline icon"></i> Modify</div>				
 		</div>			
